[GStreamer] test fast/mediastream/getDisplayMedia-size.html fails https://bugs.webkit.org/show_bug.cgi?id=233731

Reviewed by Xabier Rodriguez-Calvar.

The main fix here is to wrap the MockDisplayCaptureSourceGStreamer in a RealtimeVideoSource, same
logic as the MockRealtimeVideoSourceGStreamer.

This patch also fixes fast/mediastream/getDisplayMedia-displaySurface.html by adjusting the source
settings displaySurface, depending on which surface we're behaving as. The non-mock GStreamer
DisplayCapture source will need to set this setting too, but that's going to be addressed in a
follow-up patch.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/mediastream/gstreamer/MockRealtimeVideoSourceGStreamer.cpp:
(WebCore::MockDisplayCaptureSourceGStreamer::create):
(WebCore::MockDisplayCaptureSourceGStreamer::MockDisplayCaptureSourceGStreamer):
(WebCore::MockDisplayCaptureSourceGStreamer::settings):
* Source/WebCore/platform/mediastream/gstreamer/MockRealtimeVideoSourceGStreamer.h:
* Source/WebCore/platform/mock/MockRealtimeMediaSourceCenter.cpp:
* Source/WebCore/platform/mock/MockRealtimeVideoSource.h:

Canonical link: https://commits.webkit.org/262825@main